fix z-index for MapModal

--- a/client/src/components/MapModal/MapModal.module.css
+++ b/client/src/components/MapModal/MapModal.module.css
@@ -5,6 +5,7 @@
   position: absolute;
   width: 200px;
   transform: translate(5%, 0%);
+  z-index: 1;
 }
 
 .modal-body {
